# fissionpy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: README.ch.md
specs/001-fission-py/: spec.md
specs/001-fission-py/contracts/: cli-commands.md
specs/002-project-fission/: spec.md
specs/002-project-fission/contracts/: cli-commands.md
specs/003-export-json/: spec.md
specs/003-export-json/contracts/: cli.md
src/fissionpy/: __init__.py  __main__.py
src/fissionpy/analysis/: database.py  dependency.py  import_resolver.py  parser.py  scanner.py
src/fissionpy/cli/: analyze_cmd.py  app.py  export_cmd.py  extract_cmd.py  migrate_cmd.py  plan_cmd.py  show_cmd.py  tree_cmd.py
src/fissionpy/common/: paths.py
src/fissionpy/extraction/: extractor.py  imports.py  planner.py  progress.py
src/fissionpy/migration/: propagator.py  reorganizer.py  verifier.py
tests/: conftest.py
tests/fixtures/sample_project/: models.py  utils.py  views.py
tests/integration/: test_analyze_cmd.py  test_extract_cmd.py  test_full_workflow.py  test_migrate_cmd.py  test_performance.py  test_show_cmd.py  test_tree_cmd.py
tests/unit/: test_edge_cases.py  test_extractor.py  test_planner.py  test_propagator.py  test_reorganizer.py  test_verifier.py
