[project]
name = "fissionpy"
version = "0.2.0"
description = "Python 工程目录裂变迁移工具——基于 LibCST 将工程目录中的大文件按模块相关性拆分迁移"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "libcst>=1.0",
    "typer[all]>=0.12",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
fission = "fissionpy.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fissionpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
